# conan-libcurl

./: .travis.yml  CMakeLists.txt  FindCURL.cmake  README.md  appveyor.yml  build.py  conanfile.py
.circleci/: install.sh
.travis/: install.sh
patches/: lib_Makefile.am.new
test/: CMakeLists.txt  conanfile.py  main.c
test_package/: conanfile.py  main.c  test_package.cpp
